Spring Boot.Schema Design